--- a/fullinception/srcs/.env
+++ b/fullinception/srcs/.env
@@ -9,7 +9,7 @@ MYSQL_PASSWORD=123
 
 # WordPress
 MYSQL_HOST=mariadb
-WORDPRESS_URL=https://localhost
+WORDPRESS_URL=https://zed.42.fr
 WORDPRESS_TITLE="My Test Site"
 WORDPRESS_ADMIN_USER=admin
 WORDPRESS_ADMIN_PASSWORD=admin123
